# Wox.Plugin.Youtube.Search

./: .gitignore  Makefile  README.ko.md  README.md  plugin.json  pyproject.toml
src/: __init__.py  main.py
tests/: __init__.py  test_query.py
