[project]
name = "youtube_search"
version = "0.1.0"
description = "Searching YouTube videos using YouTube Data API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wox-plugin==0.0.48",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 140
